add img company

--- a/index.html
+++ b/index.html
@@ -868,73 +868,65 @@
                 <!-- Partner Logos Placeholders -->
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="100">
-            <img src="./asstes/img/" alt="">
-                    <p class="text-xs font-semibold text-gray-600">وزارة الموارد البشرية</p>
+            <img src="./asstes/img/Ministry-of-Commerce-01-1.png" alt="">
+                    <p class="text-xs font-semibold text-gray-600">وزارة التجارة</p>
                 </div>
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="200">
                     <img src="./asstes/img/Ministry-of-Foreign-Affairs-01.png" alt="">
-                    <p class="text-xs font-semibold text-gray-600">وزارة الداخلية</p>
+                    <p class="text-xs font-semibold text-gray-600">وزارة الخارجيه</p>
                 </div>
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="300">
-                    <i class="fas fa-passport text-4xl saudi-green mb-2"></i>
+                    <img src="./asstes/img/General Directorate of Passports.png" alt="">
                     <p class="text-xs font-semibold text-gray-600">الجوازات</p>
                 </div>
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="400">
-                    <i class="fas fa-heart text-4xl saudi-green mb-2"></i>
+                    <img src="./asstes/img/Ministry of Human Resources and Social Development.png" alt="">
                     <p class="text-xs font-semibold text-gray-600">التأمينات</p>
                 </div>
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="500">
-                    <i class="fas fa-city text-4xl saudi-green mb-2"></i>
+                     <img src="./asstes/img/balady.png" alt="">
                     <p class="text-xs font-semibold text-gray-600">بلدي</p>
                 </div>
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="600">
-                    <i class="fas fa-home text-4xl saudi-green mb-2"></i>
+                    <img src="./asstes/img/Musaned- 01.png" alt="">
                     <p class="text-xs font-semibold text-gray-600">مساند</p>
                 </div>
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="700">
-                    <i class="fas fa-credit-card text-4xl saudi-green mb-2"></i>
+                     <img src="./asstes/img/Sadad-01.png" alt="">
                     <p class="text-xs font-semibold text-gray-600">سداد</p>
                 </div>
 
-                <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
-                    data-aos-delay="800">
-                    <i class="fas fa-briefcase text-4xl saudi-green mb-2"></i>
-                    <p class="text-xs font-semibold text-gray-600">وزارة التجارة</p>
-                </div>
+
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="900">
-                    <i class="fas fa-hand-holding-heart text-4xl saudi-green mb-2"></i>
+                    <img src="./asstes/img/zakat-rax-and-customs-authority.png" alt="">
                     <p class="text-xs font-semibold text-gray-600">الزكاة والضريبة</p>
                 </div>
 
-                <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
-                    data-aos-delay="1000">
-                    <i class="fas fa-laptop text-4xl saudi-green mb-2"></i>
-                    <p class="text-xs font-semibold text-gray-600">أبشر</p>
-                </div>
+              
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="1100">
-                    <i class="fas fa-calendar-alt text-4xl saudi-green mb-2"></i>
+                    <img src="./asstes/img/Mudad.png" alt="">
                     <p class="text-xs font-semibold text-gray-600">مدد</p>
                 </div>
 
                 <div class="partner-logo bg-gray-100 rounded-lg p-6 text-center hover-lift" data-aos="fade-up"
                     data-aos-delay="1200">
-                    <i class="fas fa-users-cog text-4xl saudi-green mb-2"></i>
+                    <img src="./asstes/img/QIWA-01.png" alt="">
                     <p class="text-xs font-semibold text-gray-600">قوى</p>
                 </div>
             </div>
