--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                         <!-- Image -->
                         <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
                             <img src="./asstes/img/General Directorate of Passports.png" alt="خدمات مكتب العمل"
-                                class="w-full h-full object-cover">
+                                class="w-full h-full object-contain">
                         </div>
 
 
@@ -600,7 +600,7 @@
                         <!-- Image -->
                         <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
                             <img src="./asstes/img/Ministry-of-Foreign-Affairs-01.png" alt="خدمات وزارة الخارجية"
-                                class="w-full h-full object-cover">
+                                class="w-full h-full object-contain">
                         </div>
                         <!-- Content -->
                         <div class="mt-16">
@@ -746,7 +746,7 @@
                     <!-- Image -->
                     <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
                         <img src="./asstes/img/zakat-rax-and-customs-authority.png" alt="خدمات الزكاة"
-                            class="w-full h-full object-cover">
+                            class="w-full h-full object-contain">
                     </div>
 
                     <!-- Content -->
@@ -796,7 +796,7 @@
                         <!-- Image -->
                         <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
                             <img src="./asstes/img/QIWA-01.png" alt="خدمات منصة قوى"
-                                class="w-full h-full object-cover">
+                                class="w-full h-full object-contain">
                         </div>
 
                         <!-- Content -->
