--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@400;600;700&display=swap" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./asstes/style.css">
     <style>
@@ -479,7 +481,7 @@
             </button>
         </div>
     </div>
-</div>
+                    </div>
 
 
 
@@ -842,6 +844,200 @@
 
         </div>
     </section>
+
+
+ <!-- START SECTION: Why Choose Us -->
+  <section id="why-choose-us" class="section-padding relative overflow-hidden">
+    <!-- decorative blobs -->
+    <svg class="blob absolute -left-20 -top-10 w-80 h-80" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+      <defs><linearGradient id="g1" x1="0" x2="1"><stop offset="0" stop-color="#00a88f"/><stop offset="1" stop-color="#00544d"/></linearGradient></defs>
+      <path fill="url(#g1)" d="M42.3,-63.4C56.5,-54.9,73.8,-47.6,77.7,-36.2C81.6,-24.8,72.1,-9.1,67.6,6.6C63.1,22.3,63.6,37.9,55.6,48.6C47.7,59.3,31.3,65.1,15.1,68.8C-1.1,72.6,-17.9,74.2,-32.9,69.2C-47.9,64.2,-61.1,52.7,-65.7,38.3C-70.3,23.9,-66.3,6.6,-59,-8.4C-51.7,-23.4,-41.1,-36.7,-29.3,-46.1C-17.6,-55.5,-4.7,-61.1,9.2,-66.6C23.1,-72.1,46.1,-71.8,42.3,-63.4Z" transform="translate(100 100)" />
+    </svg>
+
+    <div class="container mx-auto px-6 md:px-12 lg:px-24">
+      <div class="max-w-7xl mx-auto bg-white rounded-3xl p-6 md:p-10 shadow-md relative z-10">
+        <!-- header -->
+        <div class="flex items-center justify-between gap-4 mb-6">
+          <div class="flex items-center gap-4">
+            <div class="w-14 h-14 rounded-xl flex items-center justify-center" style="background: linear-gradient(135deg,var(--primary), #009a84);">
+              <!-- small logo icon -->
+              <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden>
+                <path d="M4 12h16M4 6h16M4 18h10" stroke="#fff" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </div>
+            <div>
+              <h3 class="text-xl md:text-2xl font-bold" style="color:var(--primary)">لماذا تختارنا؟</h3>
+              <p class="text-sm text-slate-600">حلول سريعة وموثوقة لإتمام معاملاتك مع الجهات الحكومية بسهولة</p>
+            </div>
+          </div>
+
+          <div class="hidden md:flex items-center gap-3">
+            <a href="#contact" class="inline-flex items-center gap-2 px-4 py-2 rounded-lg text-white font-semibold" style="background:var(--primary)">
+              تواصل معنا
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M5 12h14M12 5l7 7-7 7" stroke="white" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            </a>
+            <a href="https://wa.me/9665XXXXXXXX" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 rounded-lg border border-slate-200 text-slate-700 hover:shadow-sm">
+              واتساب
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M21 15a5 5 0 0 1-1 5l-3 1-1-3a7 7 0 1 1 5-8z" stroke="currentColor" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg>
+            </a>
+          </div>
+        </div>
+
+        <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 items-center">
+          <!-- Right column: features -->
+          <div class="lg:col-span-7 space-y-4">
+            <p class="text-slate-600 text-sm md:text-base reveal">نحن نضع خبرتنا لنجعل معاملاتك الحكومية أسرع وأسهل. إليك الأسباب التي تميزنا:</p>
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-4">
+              <!-- Card 1 -->
+              <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100">
+                <div class="flex items-start gap-4">
+                  <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
+                    <!-- speed icon -->
+                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden>
+                      <path d="M3 12a9 9 0 1 1 18 0" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M12 15l3-3" stroke="var(--primary)" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M12 7v2" stroke="var(--primary)" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </div>
+                  <div>
+                    <h4 class="font-semibold text-slate-800">السرعة</h4>
+                    <p class="text-sm text-slate-500 mt-1">إنجاز المعاملات بعمليات مُحسّنة وإجراءات واضحة لتوفير الوقت وتقليل الانتظار.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 2 -->
+              <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100">
+                <div class="flex items-start gap-4">
+                  <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
+                    <!-- shield icon -->
+                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
+                      <path d="M12 3l7 3v5c0 5-3 9-7 10-4-1-7-5-7-10V6l7-3z" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M9.5 12.5l1.8 1.8 3.7-3.7" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </div>
+                  <div>
+                    <h4 class="font-semibold text-slate-800">الموثوقية</h4>
+                    <p class="text-sm text-slate-500 mt-1">التعامل مع اجراءات رسمية بدقة وشفافية، وضمان متابعة مستمرة حتى استلام النتيجة.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 3 -->
+              <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100">
+                <div class="flex items-start gap-4">
+                  <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
+                    <!-- price tag icon -->
+                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
+                      <path d="M21 10v8a2 2 0 0 1-2 2h-8L3 11l8-8h8a2 2 0 0 1 2 2v5z" stroke="var(--primary)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M7.5 7.5h.01" stroke="var(--primary)" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </div>
+                  <div>
+                    <h4 class="font-semibold text-slate-800">أسعار تنافسية</h4>
+                    <p class="text-sm text-slate-500 mt-1">سعر واضح ومناسب مع خيارات باقات لتلبية احتياجات الأفراد والشركات دون رسوم مخفية.</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Card 4 -->
+              <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100">
+                <div class="flex items-start gap-4">
+                  <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
+                    <!-- briefcase / gov building icon -->
+                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
+                      <path d="M3 7h18M8 7v12M16 7v12" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                      <path d="M12 3v4" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                  </div>
+                  <div>
+                    <h4 class="font-semibold text-slate-800">خبرة مع الجهات الحكومية</h4>
+                    <p class="text-sm text-slate-500 mt-1">فريق متمرّس يفهم متطلبات الجهات الحكومية ويُسهل التواصل الرسمي لتسريع الإجراءات.</p>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+
+            <div class="mt-6 reveal">
+              <a href="#services" class="inline-flex items-center gap-3 px-5 py-3 rounded-full font-semibold" style="background:var(--primary); color:#fff">
+                اكتشف خدماتنا
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M8 5l8 7-8 7" stroke="white" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              </a>
+            </div>
+          </div>
+
+          <!-- Left column: illustrative image -->
+          <div class="lg:col-span-5">
+            <div class="reveal rounded-3xl overflow-hidden relative shadow-lg p-4" style="background: linear-gradient(180deg,#f8fffd, #ffffff);">
+              <!-- Simple illustrative SVG (document + shield) -->
+              <div class="p-6">
+                <svg viewBox="0 0 600 400" class="w-full h-auto" xmlns="http://www.w3.org/2000/svg" aria-hidden>
+                  <defs>
+                    <linearGradient id="ill1" x1="0" x2="1">
+                      <stop offset="0" stop-color="#00a88f"/>
+                      <stop offset="1" stop-color="#00544d"/>
+                    </linearGradient>
+                  </defs>
+
+                  <rect x="40" y="40" width="360" height="280" rx="14" fill="#ffffff" stroke="#e6f2ef" />
+
+                  <!-- document lines -->
+                  <g transform="translate(70,70)">
+                    <rect width="280" height="40" rx="6" fill="#f1f8f6"/>
+                    <rect y="60" width="220" height="10" rx="4" fill="#f1f8f6"/>
+                    <rect y="80" width="180" height="10" rx="4" fill="#f1f8f6"/>
+                    <rect y="100" width="240" height="10" rx="4" fill="#f1f8f6"/>
+                  </g>
+
+                  <!-- shield -->
+                  <g transform="translate(420,100) scale(.9)">
+                    <path d="M40 10 L80 30 L80 70 C80 95 60 120 40 130 C20 120 0 95 0 70 L0 30 Z" fill="url(#ill1)" />
+                    <circle cx="40" cy="50" r="6" fill="#fff"/>
+                    <path d="M30 60 l8 8 16-16" stroke="#fff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
+                  </g>
+
+                </svg>
+              </div>
+
+              <!-- small badges -->
+              <div class="absolute bottom-6 left-6 flex flex-col gap-2">
+                <span class="px-3 py-1 text-xs rounded-full bg-white/80 text-slate-700 shadow">متابعة لحظية</span>
+                <span class="px-3 py-1 text-xs rounded-full bg-white/80 text-slate-700 shadow">تقرير نهائي</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- END SECTION -->
+
+  <script>
+    // Simple reveal on scroll + stagger
+    document.addEventListener("DOMContentLoaded", function() {
+      const reveals = Array.from(document.querySelectorAll('#why-choose-us .reveal'));
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('is-visible');
+            // optional: unobserve so animation runs once
+            observer.unobserve(entry.target);
+          }
+        });
+      }, { threshold: 0.12 });
+
+      reveals.forEach((el, i) => {
+        // small stagger
+        el.style.transitionDelay = (i * 90) + 'ms';
+        observer.observe(el);
+      });
+    });
+  </script>
+
+
 
     <!-- Partners Section -->
     <section id="partners" class="py-20 bg-white islamic-pattern">
