--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <!-- Header -->
     <header id="header" class="fixed top-0 w-full z-50 transition-all duration-300">
         <nav class="container mx-auto px-4 py-4">
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center ">
                 <!-- Logo -->
                 <div class="flex items-center space-x-3 space-x-reverse">
                     <div
@@ -91,7 +91,7 @@
                 </div>
 
                 <!-- Desktop Navigation -->
-                <div class="hidden lg:flex items-center space-x-8 space-x-reverse">
+                <div class="hidden lg:flex items-center space-x-8 space-x-reverse ">
                     <a href="#home"
                         class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">الرئيسية</a>
                     <a href="#about" class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">من
@@ -119,7 +119,7 @@
             </div>
 
             <!-- Mobile Menu -->
-            <div id="mobile-menu" class="hidden lg:hidden mt-4 bg-white rounded-lg shadow-lg p-4">
+            <div id="mobile-menu" class="hidden lg:hidden mt-4 bg-saudi-green rounded-lg shadow-lg p-4">
                 <div class="flex flex-col space-y-4">
                     <a href="#home"
                         class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">الرئيسية</a>
@@ -153,17 +153,17 @@
                 </div>
 
                 <!-- Main Title -->
-                <h1 class="hero-text text-4xl lg:text-6xl font-bold saudi-green mb-6 leading-tight">
+                <h1 class="hero-text text-4xl lg:text-6xl font-bold text-white mb-6 leading-tight">
                     بصمة آفاق للخدمات الحكومية
                     <br>
                     <span class="text-gold">في المملكة العربية السعودية</span>
                 </h1>
 
                 <!-- Subtitle -->
-                <p class="text-xl lg:text-2xl text-gray-600 mb-8 leading-relaxed max-w-3xl mx-auto">
+                <p class="text-xl lg:text-2xl text-white mb-8 leading-relaxed max-w-3xl mx-auto">
                     أكثر من 10 سنوات خبرة في مجال الخدمات والتعقيب
                     <br>
-                    <span class="font-semibold saudi-green">بخبرة عالية وسرعة ودقة في التنفيذ</span>
+                    <span class="font-semibold text-gold">بخبرة عالية وسرعة ودقة في التنفيذ</span>
                 </p>
 
                 <!-- CTA Buttons -->
@@ -173,7 +173,7 @@
                         طلب خدمة الآن
                     </a>
                     <a href="#about"
-                        class="bg-white text-saudi-green border-2 border-saudi-green px-8 py-4 rounded-lg font-bold text-lg hover:bg-saudi-green hover:text-white transition-all duration-300 shadow-xl">
+                        class="bg-white text-saudi-green border-2 border-saudi-green px-8 py-4 rounded-lg font-bold text-lg hover:bg-saudi-green hover:text-saudi-green transition-all duration-300 shadow-xl">
                         <i class="fas fa-info-circle ml-2"></i>
                         تعرف علينا أكثر
                     </a>
@@ -847,7 +847,7 @@
 
 
  <!-- START SECTION: Why Choose Us -->
-  <section id="why-choose-us" class="section-padding relative overflow-hidden">
+  <section id="why-choose-us" class="section-padding relative overflow-hidden my-5">
     <!-- decorative blobs -->
     <svg class="blob absolute -left-20 -top-10 w-80 h-80" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
       <defs><linearGradient id="g1" x1="0" x2="1"><stop offset="0" stop-color="#00a88f"/><stop offset="1" stop-color="#00544d"/></linearGradient></defs>
@@ -890,73 +890,66 @@
 
             <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-4">
               <!-- Card 1 -->
-              <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100">
-                <div class="flex items-start gap-4">
-                  <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
-                    <!-- speed icon -->
-                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden>
-                      <path d="M3 12a9 9 0 1 1 18 0" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M12 15l3-3" stroke="var(--primary)" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M12 7v2" stroke="var(--primary)" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                  </div>
-                  <div>
-                    <h4 class="font-semibold text-slate-800">السرعة</h4>
-                    <p class="text-sm text-slate-500 mt-1">إنجاز المعاملات بعمليات مُحسّنة وإجراءات واضحة لتوفير الوقت وتقليل الانتظار.</p>
-                  </div>
+        
+            <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100 transition-transform duration-300 hover:-translate-y-2 hover:shadow-xl">
+            <div class="flex items-start gap-4">
+                <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
+                <!-- أيقونة السرعة -->
+                <i class="fa-solid fa-gauge-high text-[var(--primary)] text-2xl"></i>
                 </div>
-              </div>
+                <div>
+                <h4 class="font-semibold text-slate-800">السرعة</h4>
+                <p class="text-sm text-slate-500 mt-1">
+                    إنجاز المعاملات بعمليات مُحسّنة وإجراءات واضحة لتوفير الوقت وتقليل الانتظار.
+                </p>
+                </div>
+            </div>
+            </div>
+
 
               <!-- Card 2 -->
-              <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100">
-                <div class="flex items-start gap-4">
-                  <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
-                    <!-- shield icon -->
-                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
-                      <path d="M12 3l7 3v5c0 5-3 9-7 10-4-1-7-5-7-10V6l7-3z" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M9.5 12.5l1.8 1.8 3.7-3.7" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                  </div>
-                  <div>
-                    <h4 class="font-semibold text-slate-800">الموثوقية</h4>
-                    <p class="text-sm text-slate-500 mt-1">التعامل مع اجراءات رسمية بدقة وشفافية، وضمان متابعة مستمرة حتى استلام النتيجة.</p>
-                  </div>
-                </div>
-              </div>
+           <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100 transition-transform duration-300 hover:-translate-y-2 hover:shadow-xl">
+        <div class="flex items-start gap-4">
+            <!-- أيقونة الموثوقية -->
+            <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm text-[#00544d] text-xl transition-colors duration-300 hover:bg-[#00544d] " style="background: rgba(0,84,77,0.08);">
+            <i class="fas fa-shield-alt"></i>
+            </div>
+            <div>
+            <h4 class="font-semibold text-slate-800">الموثوقية</h4>
+            <p class="text-sm text-slate-500 mt-1">التعامل مع اجراءات رسمية بدقة وشفافية، وضمان متابعة مستمرة حتى استلام النتيجة.</p>
+            </div>
+        </div>
+        </div>
+
 
               <!-- Card 3 -->
-              <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100">
-                <div class="flex items-start gap-4">
-                  <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
-                    <!-- price tag icon -->
-                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
-                      <path d="M21 10v8a2 2 0 0 1-2 2h-8L3 11l8-8h8a2 2 0 0 1 2 2v5z" stroke="var(--primary)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M7.5 7.5h.01" stroke="var(--primary)" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                  </div>
-                  <div>
-                    <h4 class="font-semibold text-slate-800">أسعار تنافسية</h4>
-                    <p class="text-sm text-slate-500 mt-1">سعر واضح ومناسب مع خيارات باقات لتلبية احتياجات الأفراد والشركات دون رسوم مخفية.</p>
-                  </div>
-                </div>
-              </div>
+         <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100 transition-transform duration-300 hover:-translate-y-2 hover:shadow-xl">
+        <div class="flex items-start gap-4">
+            <!-- أيقونة السعر -->
+            <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm text-[#00544d] text-xl transition-colors duration-300 hover:bg-[#00544d]  style="background: rgba(0,84,77,0.08);">
+            <i class="fas fa-tags"></i>
+            </div>
+            <div>
+            <h4 class="font-semibold text-slate-800">أسعار تنافسية</h4>
+            <p class="text-sm text-slate-500 mt-1">سعر واضح ومناسب مع خيارات باقات لتلبية احتياجات الأفراد والشركات دون رسوم مخفية.</p>
+            </div>
+        </div>
+        </div>
+
 
               <!-- Card 4 -->
-              <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100">
-                <div class="flex items-start gap-4">
-                  <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm" style="background: rgba(0,84,77,0.08);">
-                    <!-- briefcase / gov building icon -->
-                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none">
-                      <path d="M3 7h18M8 7v12M16 7v12" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M12 3v4" stroke="var(--primary)" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                  </div>
-                  <div>
-                    <h4 class="font-semibold text-slate-800">خبرة مع الجهات الحكومية</h4>
-                    <p class="text-sm text-slate-500 mt-1">فريق متمرّس يفهم متطلبات الجهات الحكومية ويُسهل التواصل الرسمي لتسريع الإجراءات.</p>
-                  </div>
+           <div class="reveal tilt rounded-2xl p-5 bg-gradient-to-br from-white to-[var(--glass)] border border-slate-100 transition-transform duration-300 hover:-translate-y-2 hover:shadow-xl">
+            <div class="flex items-start gap-4">
+                <div class="flex-none w-12 h-12 rounded-lg flex items-center justify-center shadow-sm text-[#00544d] text-xl" style="background: rgba(0,84,77,0.08);">
+                <i class="fas fa-landmark"></i>
                 </div>
-              </div>
+                <div>
+                <h4 class="font-semibold text-slate-800">خبرة مع الجهات الحكومية</h4>
+                <p class="text-sm text-slate-500 mt-1">فريق متمرّس يفهم متطلبات الجهات الحكومية ويُسهل التواصل الرسمي لتسريع الإجراءات.</p>
+                </div>
+            </div>
+            </div>
+
 
             </div>
 
@@ -969,45 +962,49 @@
           </div>
 
           <!-- Left column: illustrative image -->
-          <div class="lg:col-span-5">
-            <div class="reveal rounded-3xl overflow-hidden relative shadow-lg p-4" style="background: linear-gradient(180deg,#f8fffd, #ffffff);">
-              <!-- Simple illustrative SVG (document + shield) -->
-              <div class="p-6">
-                <svg viewBox="0 0 600 400" class="w-full h-auto" xmlns="http://www.w3.org/2000/svg" aria-hidden>
-                  <defs>
-                    <linearGradient id="ill1" x1="0" x2="1">
-                      <stop offset="0" stop-color="#00a88f"/>
-                      <stop offset="1" stop-color="#00544d"/>
-                    </linearGradient>
-                  </defs>
+ <!-- Left column: illustrative image -->
+<div class="lg:col-span-5">
+  <div 
+    class="reveal rounded-3xl overflow-hidden relative shadow-lg p-6 bg-gradient-to-b from-[#f8fffd] to-white transition-transform duration-500 hover:-translate-y-2 hover:shadow-2xl"
+  >
+   <!-- الصورة التوضيحية -->
+<div class="p-6">
+  <img 
+    src="./asstes/img/شعار بدون خلفية.png" 
+    alt="لماذا تختارنا" 
+    class="w-full h-auto rounded-2xl shadow-md transition-transform duration-500 hover:scale-105 hover:shadow-xl bg-saudi-green"
+  >
+</div>
 
-                  <rect x="40" y="40" width="360" height="280" rx="14" fill="#ffffff" stroke="#e6f2ef" />
 
-                  <!-- document lines -->
-                  <g transform="translate(70,70)">
-                    <rect width="280" height="40" rx="6" fill="#f1f8f6"/>
-                    <rect y="60" width="220" height="10" rx="4" fill="#f1f8f6"/>
-                    <rect y="80" width="180" height="10" rx="4" fill="#f1f8f6"/>
-                    <rect y="100" width="240" height="10" rx="4" fill="#f1f8f6"/>
-                  </g>
+    <!-- البادجات -->
+    <div class="absolute bottom-6 left-6 flex flex-col gap-2">
+      <span class="px-4 py-1 text-xs rounded-full bg-white/90 text-slate-700 shadow-md hover:bg-saudi-green transition">
+        متابعة لحظية
+      </span>
+      <span class="px-4 py-1 text-xs rounded-full bg-white/90 text-slate-700 shadow-md hover:bg-[#00a88f] transition">
+        تقرير نهائي
+      </span>
+    </div>
 
-                  <!-- shield -->
-                  <g transform="translate(420,100) scale(.9)">
-                    <path d="M40 10 L80 30 L80 70 C80 95 60 120 40 130 C20 120 0 95 0 70 L0 30 Z" fill="url(#ill1)" />
-                    <circle cx="40" cy="50" r="6" fill="#fff"/>
-                    <path d="M30 60 l8 8 16-16" stroke="#fff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" fill="none"/>
-                  </g>
+    <!-- أزرار الاتصال -->
+    <div class="mt-6 flex flex-wrap gap-3 justify-center">
+      <!-- زر الاتصال -->
+      <a href="tel:+9665XXXXXXXX" class="inline-flex items-center gap-2 px-5 py-3 rounded-full text-white font-semibold shadow-md transition hover:shadow-lg bg-saudi-green" >
+        <i class="fas fa-phone-alt text-white"></i>
+        اتصال
+      </a>
 
-                </svg>
-              </div>
+      <!-- زر واتساب -->
+      <a href="https://wa.me/9665XXXXXXXX" target="_blank" class="inline-flex items-center gap-2 px-5 py-3 rounded-full text-white font-semibold shadow-md transition hover:shadow-lg bg-gold" >
+        <i class="fab fa-whatsapp text-white"></i>
+        واتساب
+      </a>
+    </div>
+  </div>
+</div>
 
-              <!-- small badges -->
-              <div class="absolute bottom-6 left-6 flex flex-col gap-2">
-                <span class="px-3 py-1 text-xs rounded-full bg-white/80 text-slate-700 shadow">متابعة لحظية</span>
-                <span class="px-3 py-1 text-xs rounded-full bg-white/80 text-slate-700 shadow">تقرير نهائي</span>
-              </div>
-            </div>
-          </div>
+
 
         </div>
       </div>
@@ -1130,9 +1127,10 @@
                 <!-- Company Info -->
                 <div>
                     <div class="flex items-center space-x-3 space-x-reverse mb-6">
-                        <div class="w-12 h-12 bg-gold rounded-lg flex items-center justify-center">
-                            <i class="fas fa-stamp text-white text-xl"></i>
-                        </div>
+                         <div
+                        class="w-12 h-12 bg-saudi-green  rounded-lg flex items-center justify-center rounded-full border-2 border-white border-black">
+                        <img src="./asstes/img/شعار بدون خلفية.png" alt="">
+                      </div>
                         <div>
                             <h3 class="text-xl font-bold">بصمة آفاق</h3>
                             <p class="text-sm opacity-80">للخدمات الحكومية</p>
