--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body class="overflow-x-hidden">
 
     <!-- Header -->
-    <header id="header" class="fixed top-0 w-full z-50 transition-all duration-300">
+    <header id="header" class="fixed top-0 w-full z-50 transition-all duration-300 ">
         <nav class="container mx-auto px-4 py-4">
             <div class="flex justify-between items-center ">
                 <!-- Logo -->
@@ -85,23 +85,23 @@
                         <img src="./asstes/img/شعار بدون خلفية.png" alt="">
                     </div>
                     <div>
-                        <h1 class="text-xl font-bold saudi-green">بصمة آفاق</h1>
-                        <p class="text-sm text-gray-600">للخدمات الحكومية</p>
+                        <h1 class="text-xl font-bold text-white ">بصمة آفاق</h1>
+                        <p class="text-sm text-white">للخدمات الحكومية</p>
                     </div>
                 </div>
 
                 <!-- Desktop Navigation -->
                 <div class="hidden lg:flex items-center space-x-8 space-x-reverse ">
                     <a href="#home"
-                        class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">الرئيسية</a>
-                    <a href="#about" class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">من
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">الرئيسية</a>
+                    <a href="#about" class="text-white hover:text-saudi-green transition-colors font-semibold">من
                         نحن</a>
                     <a href="#services"
-                        class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">خدماتنا</a>
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">خدماتنا</a>
                     <a href="#partners"
-                        class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">شركاؤنا</a>
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">شركاؤنا</a>
                     <a href="#contact"
-                        class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">تواصل معنا</a>
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">تواصل معنا</a>
                 </div>
 
                 <!-- CTA Button -->
@@ -113,7 +113,7 @@
                 </div>
 
                 <!-- Mobile Menu Button -->
-                <button id="mobile-menu-btn" class="lg:hidden text-gray-700 text-2xl">
+                <button id="mobile-menu-btn" class="lg:hidden text-white text-2xl">
                     <i class="fas fa-bars"></i>
                 </button>
             </div>
@@ -122,15 +122,15 @@
             <div id="mobile-menu" class="hidden lg:hidden mt-4 bg-saudi-green rounded-lg shadow-lg p-4">
                 <div class="flex flex-col space-y-4">
                     <a href="#home"
-                        class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">الرئيسية</a>
-                    <a href="#about" class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">من
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">الرئيسية</a>
+                    <a href="#about" class="text-white hover:text-saudi-green transition-colors font-semibold">من
                         نحن</a>
                     <a href="#services"
-                        class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">خدماتنا</a>
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">خدماتنا</a>
                     <a href="#partners"
-                        class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">شركاؤنا</a>
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">شركاؤنا</a>
                     <a href="#contact"
-                        class="text-gray-700 hover:text-saudi-green transition-colors font-semibold">تواصل معنا</a>
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">تواصل معنا</a>
                     <a href="#contact"
                         class="bg-saudi-green px-6 py-3 rounded-lg font-semibold text-white shadow-lg text-center">
                         <i class="fas fa-phone-alt ml-2"></i>
@@ -143,8 +143,8 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-pattern islamic-pattern min-h-screen flex items-center justify-center pt-20">
-        <div class="container mx-auto px-4 text-center">
-            <div class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-duration="1000">
+        <div class="container mx-auto px-4 text-center ">
+            <div class="max-w-4xl mx-auto mb-5" data-aos="fade-up" data-aos-duration="1000">
                 <!-- Floating Icon -->
                 <div class="floating-animation mb-8">
                     <div class="w-24 h-24 bg-saudi-green rounded-full flex items-center justify-center mx-auto shadow-2xl">
@@ -167,13 +167,13 @@
                 </p>
 
                 <!-- CTA Buttons -->
-                <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                    <a href="#services" class="btn-primary px-8 py-4 rounded-lg font-bold text-lg shadow-xl">
+                <div class="flex flex-col sm:flex-row gap-4 justify-center items-center ">
+                    <a href="#services" class="btn-primary px-8 p-4 mb-5 rounded-lg font-bold text-lg shadow-xl">
                         <i class="fas fa-concierge-bell ml-2"></i>
                         طلب خدمة الآن
                     </a>
                     <a href="#about"
-                        class="bg-white text-saudi-green border-2 border-saudi-green px-8 py-4 rounded-lg font-bold text-lg hover:bg-saudi-green hover:text-saudi-green transition-all duration-300 shadow-xl">
+                        class="bg-white text-saudi-green border-2 border-saudi-green mb-5 px-8 py-4 rounded-lg font-bold text-lg hover:bg-saudi-green hover:text-saudi-green transition-all duration-300 shadow-xl">
                         <i class="fas fa-info-circle ml-2"></i>
                         تعرف علينا أكثر
                     </a>
@@ -1252,9 +1252,13 @@
         window.addEventListener('scroll', () => {
             if (window.scrollY > 100) {
                 header.classList.add('navbar-scroll');
-            } else {
+            } else{
                 header.classList.remove('navbar-scroll');
+                header.classList.add('navbar-scroll-before');
+                header.classList.add('navbar-scroll-all');
             }
+        
+
         });
 
         // Smooth Scrolling for Navigation Links
