--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
   
 <!-- About Us Section -->
-<section id="about" class="relative py-20 bg-gradient-to-br from-white via-gray-50 to-green-50 overflow-hidden">
+<section id="about"  class="relative py-20 bg-gradient-to-br from-white via-gray-50 to-green-50 overflow-hidden ">
   <div class="container mx-auto px-6 lg:px-12">
     
     <!-- Title -->
@@ -256,6 +256,8 @@
     </div>
   </div>
 
+
+
   <!-- Floating Buttons -->
   <div class="fixed bottom-6 right-6 flex flex-col gap-3 z-50">
     <a href="tel:966500000000" class="bg-blue-600 text-white w-14 h-14 flex items-center justify-center rounded-full shadow-lg hover:bg-[#007d70] transition">
@@ -267,6 +269,34 @@
   </div>
 </section>
 
+<section class="relative bg-cover bg-center bg-no-repeat py-16 px-6 lg:px-20 text overflow-hidden banner-1" 
+         style="background-image: url('./asstes/img/sign.png');">
+  <!-- طبقة تغطية داكنة -->
+  <div class="absolute inset-0 "></div>
+
+  <div class="relative max-w-5xl mx-auto text-center">
+    <!-- العنوان -->
+    <h2 class="text-4xl lg:text-5xl font-bold saudi-green mb-4">
+      بصمة آفاق للخدمات الحكومية
+    </h2>
+
+    <!-- النص -->
+    <p class="text-lg md:text-xl leading-relaxed font-['Tajawal'] max-w-3xl mx-auto mb-8">
+      في <span class="font-bold saudi-green">شركة بصمة آفاق</span> نضع نصب أعيننا تسهيل الإجراءات الحكومية 
+      وتقديم حلول رقمية متكاملة توفر الوقت والجهد.  
+      نلتزم بالسرعة، الدقة، والأمان في جميع خدماتنا لنكون شريكك الموثوق 
+      في إنجاز المعاملات بالمملكة العربية السعودية.
+    </p>
+
+    <!-- زر الاتصال -->
+    <div class="flex justify-center">
+      <a href="tel:966500000000" 
+         class="bg-yellow-400 text-green-900 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-yellow-300 transition-all font-['Tajawal']">
+        اتصل بنا الآن
+      </a>
+    </div>
+  </div>
+</section>
 
 
     <!-- Services Section -->
