--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بصمة آفاق للخدمات الحكومية - المملكة العربية السعودية</title>
+    <title>منصة آفاق للخدمات الحكومية - المملكة العربية السعودية</title>
 
     <!-- External Libraries -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -85,7 +85,7 @@
                         <img src="./asstes/img/شعار بدون خلفية.png" alt="">
                     </div>
                     <div>
-                        <h1 class="text-xl font-bold text-white ">بصمة آفاق</h1>
+                        <h1 class="text-xl font-bold text-white ">منصة آفاق</h1>
                         <p class="text-sm text-white">للخدمات الحكومية</p>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
 
                 <!-- Main Title -->
                 <h1 class="hero-text text-4xl lg:text-6xl font-bold text-white mb-6 leading-tight">
-                    بصمة آفاق للخدمات الحكومية
+                    منصة آفاق للخدمات الحكومية
                     <br>
                     <span class="text-gold">في المملكة العربية السعودية</span>
                 </h1>
@@ -277,12 +277,12 @@
   <div class="relative max-w-5xl mx-auto text-center">
     <!-- العنوان -->
     <h2 class="text-4xl lg:text-5xl font-bold saudi-green mb-4">
-      بصمة آفاق للخدمات الحكومية
+      منصة آفاق للخدمات الحكومية
     </h2>
 
     <!-- النص -->
     <p class="text-lg md:text-xl leading-relaxed font-['Tajawal'] max-w-3xl mx-auto mb-8">
-      في <span class="font-bold saudi-green">شركة بصمة آفاق</span> نضع نصب أعيننا تسهيل الإجراءات الحكومية 
+      في <span class="font-bold saudi-green">شركة منصة آفاق</span> نضع نصب أعيننا تسهيل الإجراءات الحكومية 
       وتقديم حلول رقمية متكاملة توفر الوقت والجهد.  
       نلتزم بالسرعة، الدقة، والأمان في جميع خدماتنا لنكون شريكك الموثوق 
       في إنجاز المعاملات بالمملكة العربية السعودية.
@@ -291,7 +291,7 @@
     <!-- زر الاتصال -->
     <div class="flex justify-center">
       <a href="tel:966500000000" 
-         class="bg-yellow-400 text-green-900 font-bold py-3 px-8 rounded-full shadow-lg hover:bg-yellow-300 transition-all font-['Tajawal']">
+         class="bg-saudi-green text-white font-bold py-3 px-8 rounded-full shadow-lg  transition-all font-['Tajawal']">
         اتصل بنا الآن
       </a>
     </div>
@@ -876,6 +876,50 @@
     </section>
 
 
+    <div class="w-full my-5">
+  <img 
+    src="./asstes/img/Asset 15@4x.png" 
+    alt="نقشة سدو سعودية" 
+    class="w-full h-20 object-cover opacity-80b">
+</div>
+
+    <section class="relative bg-white py-20 px-6 lg:px-20 overflow-hidden banner-2" style="background-image: url('./asstes/img/sign.png');">
+  <div class="max-w-6xl mx-auto grid lg:grid-cols-2 gap-12 items-center">
+     <div class="absolute inset-0 bg-black/50"></div>
+    <!-- النص -->
+    <div class="text-right">
+      <h2 class="text-3xl md:text-4xl font-extrabold text-green-800 mb-6 font-['Tajawal']">
+        أهمية إنجاز الخدمات الحكومية بسرعة
+      </h2>
+      <p class="text-lg text-gray-700 leading-relaxed mb-6 font-['Tajawal']">
+        في <span class="font-bold text-green-700">منصة آفاق</span> ندرك أن سرعة إنجاز 
+        الخدمات الحكومية ليست مجرد خيار، بل ضرورة لضمان راحة المواطنين 
+        وتسهيل تعاملاتهم اليومية.  
+      </p>
+      <p class="text-lg text-gray-700 leading-relaxed mb-8 font-['Tajawal']">
+        لذلك نعمل على توفير حلول مبتكرة تضمن الدقة، الكفاءة، 
+        والالتزام بمعايير الجودة لتقديم تجربة سلسة تلبي توقعات العملاء في المملكة العربية السعودية.
+      </p>
+
+      <a href="tel:966500000000" 
+         class="inline-block bg-saudi-green text-white font-bold py-3 px-8 rounded-full shadow-md  transition-all font-['Tajawal']">
+        تواصل معنا الآن
+      </a>
+    </div>
+
+    <!-- صورة/أيقونة -->
+    <div class="relative flex justify-center lg:justify-start">
+      <img src="./asstes/img/business-visa.png" 
+           alt="الخدمات الحكومية" 
+           class="w-80 lg:w-96 rounded-2xl shadow-lg border-4 border-green-700">
+      <!-- زخرفة -->
+      <div class="absolute -top-6 -left-6 w-24 h-24 bg-green-100 rounded-full animate-pulse"></div>
+      <div class="absolute -bottom-6 -right-6 w-20 h-20 bg-yellow-100 rounded-full animate-bounce"></div>
+    </div>
+  </div>
+</section>
+
+
  <!-- START SECTION: Why Choose Us -->
   <section id="why-choose-us" class="section-padding relative overflow-hidden my-5">
     <!-- decorative blobs -->
@@ -885,7 +929,7 @@
     </svg>
 
     <div class="container mx-auto px-6 md:px-12 lg:px-24">
-      <div class="max-w-7xl mx-auto bg-white rounded-3xl p-6 md:p-10 shadow-md relative z-10">
+      <div class="max-w-7xl mx-auto bg-white  p-6 md:p-10  relative z-10">
         <!-- header -->
         <div class="flex items-center justify-between gap-4 mb-6">
           <div class="flex items-center gap-4">
@@ -896,8 +940,8 @@
               </svg>
             </div>
             <div>
-              <h3 class="text-xl md:text-2xl font-bold" style="color:var(--primary)">لماذا تختارنا؟</h3>
-              <p class="text-sm text-slate-600">حلول سريعة وموثوقة لإتمام معاملاتك مع الجهات الحكومية بسهولة</p>
+              <h3 class="text-4xl lg:text-5xl font-bold saudi-green m-2 se font-bold">لماذا تختارنا؟</h3>
+              <p class=" text-slate-600">حلول سريعة وموثوقة لإتمام معاملاتك مع الجهات الحكومية بسهولة</p>
             </div>
           </div>
 
@@ -916,7 +960,7 @@
         <div class="grid grid-cols-1 lg:grid-cols-12 gap-6 items-center">
           <!-- Right column: features -->
           <div class="lg:col-span-7 space-y-4">
-            <p class="text-slate-600 text-sm md:text-base reveal">نحن نضع خبرتنا لنجعل معاملاتك الحكومية أسرع وأسهل. إليك الأسباب التي تميزنا:</p>
+            <p class="text-slate-600  md:text-base reveal">نحن نضع خبرتنا لنجعل معاملاتك الحكومية أسرع وأسهل. إليك الأسباب التي تميزنا:</p>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mt-4">
               <!-- Card 1 -->
@@ -928,8 +972,8 @@
                 <i class="fa-solid fa-gauge-high text-[var(--primary)] text-2xl"></i>
                 </div>
                 <div>
-                <h4 class="font-semibold text-slate-800">السرعة</h4>
-                <p class="text-sm text-slate-500 mt-1">
+                <h3 class="font-bold saudi-green text-2xl">السرعة</h3>
+                <p class="text text-slate-500 mt-1">
                     إنجاز المعاملات بعمليات مُحسّنة وإجراءات واضحة لتوفير الوقت وتقليل الانتظار.
                 </p>
                 </div>
@@ -945,8 +989,8 @@
             <i class="fas fa-shield-alt"></i>
             </div>
             <div>
-            <h4 class="font-semibold text-slate-800">الموثوقية</h4>
-            <p class="text-sm text-slate-500 mt-1">التعامل مع اجراءات رسمية بدقة وشفافية، وضمان متابعة مستمرة حتى استلام النتيجة.</p>
+            <h4 class="font-bold saudi-green text-2xl">الموثوقية</h4>
+            <p class=" text-slate-500 mt-1">التعامل مع اجراءات رسمية بدقة وشفافية، وضمان متابعة مستمرة حتى استلام النتيجة.</p>
             </div>
         </div>
         </div>
@@ -960,8 +1004,8 @@
             <i class="fas fa-tags"></i>
             </div>
             <div>
-            <h4 class="font-semibold text-slate-800">أسعار تنافسية</h4>
-            <p class="text-sm text-slate-500 mt-1">سعر واضح ومناسب مع خيارات باقات لتلبية احتياجات الأفراد والشركات دون رسوم مخفية.</p>
+            <h4 class="font-bold saudi-green text-2xl">أسعار تنافسية</h4>
+            <p class="text-slate-500 mt-1">سعر واضح ومناسب مع خيارات باقات لتلبية احتياجات الأفراد والشركات دون رسوم مخفية.</p>
             </div>
         </div>
         </div>
@@ -974,8 +1018,8 @@
                 <i class="fas fa-landmark"></i>
                 </div>
                 <div>
-                <h4 class="font-semibold text-slate-800">خبرة مع الجهات الحكومية</h4>
-                <p class="text-sm text-slate-500 mt-1">فريق متمرّس يفهم متطلبات الجهات الحكومية ويُسهل التواصل الرسمي لتسريع الإجراءات.</p>
+                <h4 class="font-bold saudi-green text-2xl">خبرة مع الجهات الحكومية</h4>
+                <p class="text-slate-500 mt-1">فريق متمرّس يفهم متطلبات الجهات الحكومية ويُسهل التواصل الرسمي لتسريع الإجراءات.</p>
                 </div>
             </div>
             </div>
@@ -1007,15 +1051,7 @@
 </div>
 
 
-    <!-- البادجات -->
-    <div class="absolute bottom-6 left-6 flex flex-col gap-2">
-      <span class="px-4 py-1 text-xs rounded-full bg-white/90 text-slate-700 shadow-md hover:bg-saudi-green transition">
-        متابعة لحظية
-      </span>
-      <span class="px-4 py-1 text-xs rounded-full bg-white/90 text-slate-700 shadow-md hover:bg-[#00a88f] transition">
-        تقرير نهائي
-      </span>
-    </div>
+   
 
     <!-- أزرار الاتصال -->
     <div class="mt-6 flex flex-wrap gap-3 justify-center">
@@ -1072,10 +1108,10 @@
       <!-- Text Content -->
       <div class="max-w-2xl mb-6 lg:mb-0">
       <h2 class="text-3xl font-bold text-green-900 mb-4 font-['Tajawal']">
-  شركة بصمة آفاق للخدمات الحكومية
+  شركة منصة آفاق للخدمات الحكومية
 </h2>
 <p class="text-gray-700 mb-6 font-['Tajawal'] leading-relaxed">
-  تعتبر <span class="font-bold text-green-800">شركة بصمة آفاق</span> من الشركات الرائدة في مجال 
+  تعتبر <span class="font-bold text-green-800">شركة منصة آفاق</span> من الشركات الرائدة في مجال 
   <span class="text-green-700">الخدمات الحكومية بالمملكة العربية السعودية</span>، حيث نحرص على 
   تقديم حلول مبتكرة تسهل إنجاز المعاملات الرسمية بسرعة، دقة، وأمان.  
   نسعى دائماً إلى دعم عملائنا وتوفير خدمات متكاملة تسهم في توفير الوقت والجهد 
@@ -1109,7 +1145,7 @@
   <img 
     src="./asstes/img/Asset 16@4x.png" 
     alt="نقشة سدو سعودية" 
-    class="w-full h-24 object-cover"
+    class="w-full h-24 object-cover opacity-80"
   >
 </div>
 
@@ -1254,7 +1290,7 @@
                         <img src="./asstes/img/شعار بدون خلفية.png" alt="">
                       </div>
                         <div>
-                            <h3 class="text-xl font-bold">بصمة آفاق</h3>
+                            <h3 class="text-xl font-bold">منصة آفاق</h3>
                             <p class="text-sm opacity-80">للخدمات الحكومية</p>
                         </div>
                     </div>
@@ -1264,19 +1300,13 @@
                     <!-- Social Media -->
                     <div class="flex space-x-4 space-x-reverse">
                         <a href="https://x.com/afaq_2030_?t=uOKwnekVXS_jIEurxLb4lw&s=09"
-                            class="w-10 h-10 bg-gold rounded-full flex items-center justify-center hover:bg-opacity-80 transition-colors">
+                            class="w-10 h-10 bg-blue-400 p-5 rounded-full flex items-center justify-center hover:bg-opacity-80 transition-colors">
                             <i class="fab fa-twitter text-white"></i>
                         </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-gold rounded-full flex items-center justify-center hover:bg-opacity-80 transition-colors">
-                            <i class="fab fa-linkedin text-white"></i>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-gold rounded-full flex items-center justify-center hover:bg-opacity-80 transition-colors">
-                            <i class="fab fa-whatsapp text-white"></i>
-                        </a>
+                       
+                       
                         <a href="https://www.tiktok.com/@basmat.afaq?_t=ZS-8zRT2jxTRUl&_r=1"
-                            class="w-10 h-10 bg-gold rounded-full flex items-center justify-center hover:bg-opacity-80 transition-colors">
+                            class="w-10 h-10 bg-black rounded-full flex items-center justify-center hover:bg-opacity-80 transition-colors">
                             <i class="fab fa-tiktok text-white"></i>
                         </a>
                     </div>
@@ -1337,7 +1367,7 @@
             <div class="border-t border-white border-opacity-20 pt-8">
                 <div class="text-center">
                     <p class="opacity-90">
-                        © 2024 جميع الحقوق محفوظة لشركة بصمة آفاق للخدمات الحكومية - المملكة العربية السعودية
+                        © 2024 جميع الحقوق محفوظة لشركة منصة آفاق للخدمات الحكومية - المملكة العربية السعودية
                     </p>
                 </div>
             </div>
