--- a/index.html
+++ b/index.html
@@ -1613,12 +1613,12 @@
         <div class="partners-hero-header">
             <div class="partners-title-container">
                 <div class="partners-title-backdrop"></div>
-                <h2 class="partners-mega-title">شركاؤنا</h2>
+                <h2 class="partners-mega-title">المؤسسات</h2>
                 
             </div>
             <div class="partners-subtitle-container">
                 <p class="partners-description">
-                    نفتخر بشراكتنا مع أهم الجهات الحكومية في المملكة العربية السعودية
+                    نقدم  خدماتنا مع أهم الجهات الحكومية في المملكة العربية السعودية
                 </p>
                 <div class="partners-description-line"></div>
             </div>
