--- a/index.html
+++ b/index.html
@@ -488,10 +488,9 @@
                         نحن</a>
                     <a href="#services"
                         class="text-white hover:text-saudi-green transition-colors font-semibold">خدماتنا</a>
-                    <a href="#partners"
-                        class="text-white hover:text-saudi-green transition-colors font-semibold">شركاؤنا</a>
-                    <a href="#contact" class="text-white hover:text-saudi-green transition-colors font-semibold">تواصل
-                        معنا</a>
+                    <a href="#Institutions"
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">المؤسسات</a>
+                    
                 </div>
 
                 <!-- CTA Button -->
@@ -517,8 +516,8 @@
                         نحن</a>
                     <a href="#services"
                         class="text-white hover:text-saudi-green transition-colors font-semibold">خدماتنا</a>
-                    <a href="#partners"
-                        class="text-white hover:text-saudi-green transition-colors font-semibold">شركاؤنا</a>
+                    <a href="#Institutions"
+                        class="text-white hover:text-saudi-green transition-colors font-semibold">المؤسسات</a>
                     <a href="#contact" class="text-white hover:text-saudi-green transition-colors font-semibold">تواصل
                         معنا</a>
                     <a href="#contact"
@@ -1609,7 +1608,7 @@
 
 
     <!-- Enhanced Partners Section with Super Modern Design -->
-    <section class="partners-mega-section" dir="ltr">
+    <section class="partners-mega-section" dir="ltr" id="Institutions">
         <div class="partners-hero-header">
             <div class="partners-title-container">
                 <div class="partners-title-backdrop"></div>
@@ -1858,11 +1857,9 @@
                                 نحن</a></li>
                         <li><a href="#services"
                                 class="opacity-90 hover:opacity-100 hover:text-gold transition-colors">خدماتنا</a></li>
-                        <li><a href="#partners"
-                                class="opacity-90 hover:opacity-100 hover:text-gold transition-colors">شركاؤنا</a></li>
-                        <li><a href="#contact"
-                                class="opacity-90 hover:opacity-100 hover:text-gold transition-colors">تواصل معنا</a>
-                        </li>
+                        <li><a href="#Institutions"
+                                class="opacity-90 hover:opacity-100 hover:text-gold transition-colors">المؤسسات</a></li>
+                        
                     </ul>
                 </div>
 
