--- a/index.html
+++ b/index.html
@@ -518,9 +518,8 @@
                         class="text-white hover:text-saudi-green transition-colors font-semibold">خدماتنا</a>
                     <a href="#Institutions"
                         class="text-white hover:text-saudi-green transition-colors font-semibold">المؤسسات</a>
-                    <a href="#contact" class="text-white hover:text-saudi-green transition-colors font-semibold">تواصل
-                        معنا</a>
-                    <a href="#contact"
+                    
+                    <a href="tel:966500000000"
                         class="bg-saudi-green px-6 py-3 rounded-lg font-semibold text-white shadow-lg text-center">
                         <i class="fas fa-phone-alt ml-2"></i>
                         اتصل بنا
