change hero section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>منصة آفاق للخدمات الحكومية - المملكة العربية السعودية</title>
+    <title> آفاق للخدمات العامة - المملكة العربية السعودية</title>
 
     <!-- External Libraries -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -475,8 +475,8 @@
                         <img src="./asstes/img/شعار بدون خلفية.png" alt="">
                     </div>
                     <div>
-                        <h1 class="text-xl font-bold text-white ">منصة آفاق</h1>
-                        <p class="text-sm text-white">للخدمات الحكومية</p>
+                        <h1 class="text-xl font-bold text-white "> آفاق</h1>
+                        <p class="text-sm text-white">للخدمات العامة</p>
                     </div>
                 </div>
 
@@ -543,7 +543,7 @@
 
                 <!-- Main Title -->
                 <h1 class="hero-text text-4xl lg:text-6xl font-bold text-white mb-6 leading-tight">
-                    منصة آفاق للخدمات الحكومية
+                     آفاق للخدمات العامة
                     <br>
                     <span class="text-gold">في المملكة العربية السعودية</span>
                 </h1>
@@ -673,12 +673,12 @@
         <div class="relative max-w-5xl mx-auto text-center">
             <!-- العنوان -->
             <h2 class="text-4xl lg:text-5xl font-bold saudi-green mb-4">
-                منصة آفاق للخدمات الحكومية
+                 آفاق للخدمات العامة
             </h2>
 
             <!-- النص -->
             <p class="text-lg md:text-xl leading-relaxed  max-w-3xl mx-auto mb-8">
-                في <span class="font-bold saudi-green">شركة منصة آفاق</span> نضع نصب أعيننا تسهيل الإجراءات الحكومية
+                في <span class="font-bold saudi-green"> للخدمات آفاق</span> نضع نصب أعيننا تسهيل الإجراءات الحكومية
                 وتقديم حلول رقمية متكاملة توفر الوقت والجهد.
                 نلتزم بالسرعة، الدقة، والأمان في جميع خدماتنا لنكون شريكك الموثوق
                 في إنجاز المعاملات بالمملكة العربية السعودية.
