--- a/index.html
+++ b/index.html
@@ -1824,12 +1824,12 @@
                             <img src="./asstes/img/شعار بدون خلفية.png" alt="">
                         </div>
                         <div>
-                            <h3 class="text-xl font-bold">منصة آفاق</h3>
-                            <p class="text-sm opacity-80">للخدمات الحكومية</p>
+                            <h3 class="text-xl font-bold"> آفاق</h3>
+                            <p class="text-sm opacity-80">للخدمات العامة</p>
                         </div>
                     </div>
                     <p class="opacity-90 leading-relaxed mb-6">
-                        شركة متخصصة في تقديم الخدمات الحكومية بأعلى معايير الجودة والمهنية في المملكة العربية السعودية
+                        افاق متخصصة في تقديم الخدمات العامة بأعلى معايير الجودة والمهنية في المملكة العربية السعودية
                     </p>
                     <!-- Social Media -->
                     <div class="flex space-x-4 space-x-reverse">
