--- a/index.html
+++ b/index.html
@@ -641,9 +641,8 @@
 
                 <!-- Image -->
                 <div class="relative group" data-aos="fade-left" data-aos-delay="300">
-                    <div class="overflow-hidden rounded-3xl shadow-2xl">
-                        <img src="./asstes/img/2025-08-18.jpg" alt="عن الشركة"
-                            class="w-full h-[500px] object-cover transform transition-transform duration-700 group-hover:scale-105" />
+                    <div class="overflow-hidden rounded-3xl shadow-2xl w-50 h-50 ">
+                        <img src="./asstes/img/about.jpg" alt="عن الشركة" class="w-auto object-content transform transition-transform duration-700 group-hover:scale-105" />
                     </div>
                 </div>
 
@@ -666,19 +665,20 @@
     </section>
 
     <section class="relative bg-cover bg-center bg-no-repeat py-16 px-6 lg:px-20 text overflow-hidden banner-1"
-        style="background-image: url('./asstes/img/sign.png');">
+        style="
+background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7) 100%)">
         <!-- طبقة تغطية داكنة -->
         <div class="absolute inset-0 "></div>
 
         <div class="relative max-w-5xl mx-auto text-center">
             <!-- العنوان -->
-            <h2 class="text-4xl lg:text-5xl font-bold saudi-green mb-4">
+            <h2 class="text-4xl lg:text-5xl font-bold text-white mb-4">
                  آفاق للخدمات العامة
             </h2>
 
             <!-- النص -->
-            <p class="text-lg md:text-xl leading-relaxed  max-w-3xl mx-auto mb-8">
-                في <span class="font-bold saudi-green">  آفاق للخدمات </span> نضع نصب أعيننا تسهيل الإجراءات الحكومية
+            <p class="text-lg md:text-xl leading-relaxed  text-white  mx-auto mb-8">
+                في <span class="font-bold text-white">  آفاق للخدمات </span> نضع نصب أعيننا تسهيل الإجراءات الحكومية
                 وتقديم حلول رقمية متكاملة توفر الوقت والجهد.
                 نلتزم بالسرعة، الدقة، والأمان في جميع خدماتنا لنكون شريكك الموثوق
                 في إنجاز المعاملات بالمملكة العربية السعودية.
@@ -769,8 +769,8 @@
 
                         <!-- Image -->
                         <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
-                            <img src="./asstes/img/Absher Business.png" alt="خدمات مكتب العمل"
-                                class="w-full h-full object-cover">
+                            <img src="./asstes/img/download.png" alt="خدمات مكتب العمل"
+                                class="w-full h-full object-contain">
                         </div>
 
                         <!-- Content -->
@@ -875,8 +875,8 @@
 
                         <!-- Image -->
                         <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
-                            <img src="./asstes/img/Ministry of Human Resources and Social Development.png"
-                                alt="التأمينات الاجتماعية" class="w-full h-full object-cover">
+                            <img src="./asstes/img/Social-services.jpg"
+                                alt="التأمينات الاجتماعية" class="w-full h-full object-contain">
                         </div>
 
                         <!-- Content -->
@@ -986,7 +986,7 @@
 
                         <!-- Image -->
                         <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
-                            <img src="./asstes/img/Najiz.png" alt="الخدمات الإلكترونية"
+                            <img src="./asstes/img/Electronic-services (2).webp" alt="الخدمات الإلكترونية"
                                 class="w-full h-full object-cover">
                         </div>
 
