change button and footer

--- a/index.html
+++ b/index.html
@@ -2206,10 +2206,9 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                           <a href="https://qr.me-qr.com/pIDDLuOX" target="_blank" rel="noopener noreferrer">
-                                <p class="text-sm text-gray-600 hover:text-saudi-green transition">
-                                   لقراءة المزيد من التقييمات
-                                </p>
+                           <a href="https://www.google.com/maps/place/YOUR_BUSINESS_LINK" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-md fw-bold text-saudi-green hover:text-saudi-green transition">
+                                <span>المزيد من التقييمات</span>
+                                <i class="fas fa-arrow-left ml-2 m-3"></i> 
                             </a>
                         </div>
                     </div>
@@ -2330,7 +2329,7 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
             <div class="border-t border-white border-opacity-20 pt-8">
                 <div class="text-center">
                     <p class="opacity-90" dir="ltr">
-                        © 2025 جميع الحقوق محفوظة لشركة منصة آفاق للخدمات الحكومية - المملكة العربية السعودية
+                        © 2025 جميع الحقوق محفوظة لشركة منصة آفاق للخدمات العامة - المملكة العربية السعودية
                     </p>
                 </div>
             </div>
