--- a/index.html
+++ b/index.html
@@ -2206,7 +2206,7 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div>
-                           <a href="https://www.google.com/maps/place/YOUR_BUSINESS_LINK" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-md fw-bold text-saudi-green hover:text-saudi-green transition">
+                           <a href="https://qr.me-qr.com/pIDDLuOX" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-md fw-bold text-saudi-green hover:text-saudi-green transition">
                                 <span>المزيد من التقييمات</span>
                                 <i class="fas fa-arrow-left ml-2 m-3"></i> 
                             </a>
