--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
 
                         <!-- Image -->
                         <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
-                            <img src="./asstes/img/balady.png" alt="خدمات البلدية" class="w-full h-full object-cover">
+                            <img src="./asstes/img/Ministry-of-Municipal-and-Rural-Affairs-01.png" alt="خدمات البلدية" class="w-full h-full object-cover">
                         </div>
 
                         <!-- Content -->
