--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
     <div class="card-content">
         <!-- Image -->
         <div class="card-image-container w-full h-48 rounded-2xl overflow-hidden mb-6">
-            <img src="./asstes/img/najiz.png" alt="خدمات ناجز"
+            <img src="./asstes/img/Najiz.png" alt="خدمات ناجز"
                 class="w-full h-full object-cover">
         </div>
 
