--- a/index.html
+++ b/index.html
@@ -140,16 +140,20 @@
         <div class="grid lg:grid-cols-2 gap-20 items-center justify-center">
             
             <!-- Text Content -->
-            <div class="order-1 lg:order-1 text-center lg:text-right p-5">
+            <div class="order-1 lg:order-1 text-center lg:text-right p-3">
                 <div class="max-w-2xl mx-auto lg:mx-0">
                     <!-- Main Title -->
                     <h1 class="text-4xl lg:text-5xl xl:text-6xl font-bold text-gold mb-6 leading-tight">
                         آفاق للخدمات العامة
                         <br>
-                        <span class="text-white bg-clip-text bg-gradient-to-r from-yellow-400 to-amber-500">
+                        <span class="text-white bg-clip-text bg-gradient-to-r from-yellow-400 to-amber-500 ">
                             في المملكة العربية السعودية
                         </span>
+                         <span class="text-white text-2xl pt-1 lg:text-3xl xl:text-3xl bg-clip-text bg-gradient-to-r from-yellow-400 to-amber-500 pt-2 ">
+                            روية متميزة وافاق واسعة
+                    </span>
                     </h1>
+                    
 
                     <!-- Subtitle -->
                     <p class="text-lg lg:text-xl xl:text-2xl text-gold mb-8 leading-relaxed">
