--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             في المملكة العربية السعودية
                         </span>
                          <span class="text-white text-2xl pt-1 lg:text-3xl xl:text-3xl bg-clip-text bg-gradient-to-r from-yellow-400 to-amber-500 pt-2 ">
-                            روية متميزة وافاق واسعة
+                            روية متميزة وآفاق واسعة
                     </span>
                     </h1>
                     
