--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="max-w-2xl mx-auto lg:mx-0">
                     <!-- Main Title -->
                     <h1 class="text-4xl lg:text-5xl xl:text-6xl font-bold text-gold mb-6 leading-tight">
-                        آفاق للخدمات العامة
+                         بصمةآفاق للخدمات العامة
                         <br>
                         <span class="text-white bg-clip-text bg-gradient-to-r from-yellow-400 to-amber-500 ">
                              روية متميزة وآفاق واسعة
