--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
                 <div class="partner-super-item">
                     <div class="partner-item-glow"></div>
                     <div class="partner-image-container">
-                        <img src="./asstes/img/Ministry of Human Resources and Social Development.png" alt="التأمينات"
+                        <img src="./asstes/img/human-resource.png" alt="التنمية الاجتماعية"
                             class="partner-super-logo">
 
                     </div>
