change font in hero section

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     
 
                     <!-- Subtitle -->
-                    <p class="text-lg lg:text-xl xl:text-2xl text-gold mb-8 leading-relaxed">
+                    <p class="font-semibold lg:text-xl xl:text-2xl text-gold mb-8 leading-relaxed">
                         أكثر من 12 سنوات خبرة في مجال الخدمات والتعقيب
                         <br>
                         <span class="font-semibold text-gold">
