--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="max-w-2xl mx-auto lg:mx-0">
                     <!-- Main Title -->
                     <h1 class="text-4xl lg:text-5xl xl:text-6xl font-bold text-gold mb-6 leading-tight">
-                         بصمة آفاق للخدمات العامة
+                          آفاق للخدمات العامة
                         <br>
 
                     </h1>
@@ -2362,7 +2362,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                            <a href="https://www.google.com/maps/place/%D8%A8%D8%B5%D9%85%D8%A9+%D8%A7%D9%81%D8%A7%D9%82+%D9%84%D9%84%D8%AE%D8%AF%D9%85%D8%A7%D8%AA+%D8%A7%D9%84%D8%B9%D8%A7%D9%85%D8%A9%E2%80%AD/@21.5970649,39.1708836,17z/data=!3m1!4b1!4m6!3m5!1s0x15c17dd72795a913:0xee416cd1f442e430!8m2!3d21.5970649!4d39.1708836!16s%2Fg%2F11wbh9zt4c?entry=ttu&g_ep=EgoyMDI1MDkwNy4wIKXMDSoASAFQAw%3D%3D" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-md fw-bold text-saudi-green hover:text-saudi-green transition">
-                                <span>المزيد من التقييمات</span>
+                                <span>اطلع علي المزيد من التقييمات</span>
                                 <i class="fas fa-arrow-left ml-2 m-3"></i> 
                             </a>
                         </div>
@@ -2465,16 +2465,28 @@
                     <div class="space-y-4">
                         <div class="flex items-center space-x-3 space-x-reverse">
                             <i class="fas fa-phone text-gold"></i>
-                            <span class="opacity-90" dir="ltr">+966555952139</span>
+                            <span class="opacity-90" dir="ltr">+966508298617</span>
                         </div>
                         <div class="flex items-center space-x-3 space-x-reverse">
                             <i class="fas fa-envelope text-gold"></i>
-                            <span class="opacity-90" dir="ltr">info@basmatafaq.com</span>
+                            <span class="opacity-90" dir="ltr">afaq0012@gmail.com</span>
                         </div>
                         <div class="flex items-start space-x-3 space-x-reverse">
                             <i class="fas fa-map-marker-alt text-gold mt-1"></i>
-                            <span class="opacity-90">جدة , حي البوادي شارع ابو الحسن الهمذاني , المملكة العربية
-                                السعودية</span>
+                            <span class="opacity-90">جدة - حي البوادي - شارع ابو الحسن الهمذاني في طريق الستين
+ 
+                                </span>
+                        </div>
+                        <div class="flex items-start space-x-3 space-x-reverse">
+                            <i class="fas fa-map-marker-alt text-gold mt-1"></i>
+                            <span class="opacity-90">جدة - حي الربوة - شارع يحيى المعلمي
+
+                             </span>
+                        </div>
+                        <div class="flex items-start space-x-3 space-x-reverse">
+                            <i class="fas fa-map-marker-alt text-gold mt-1"></i>
+                            <span class="opacity-90">جدة - حي البلد - المنطقة التاريخية مقابل باب شريف
+                                </span>
                         </div>
                     </div>
                 </div>
